# Taktix

./: LICENSE  README.md  pyproject.toml
taktix/: __init__.py  app.css  cli.py  game.py
taktix/game/: game_manager.py
taktix/game/characters/: character.py
taktix/game/items/: accessory.py  item.py  weapon.py
taktix/screens/: game_screen.py  main_screen.py  tutorial_screen.py
