[tool.poetry]
name = "taktix"
version = "0.1.0"
description = "Taktix project"
authors = ["Nathan Kinkade"]
readme = "README.md"
repository = "https://github.com/Naddarobo/Taktix"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.14"
python-dotenv = "<1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
game = "Taktix.game:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
